# pond

./: .fsspec.yaml  .pre-commit-config.yaml  .pyiceberg.yaml  CONTRIBUTING.md  LICENSE  README.md  example.py  example_fastapi.py  marimo_example.py  mkdocs.yml  pyproject.toml  test.py
.github/workflows/: docs.yml  tests.yml
conf/: catalog.py  file_catalog.py  table_catalog.py  variant_catalog.py
docs/: TESTING_GUIDE.md  conftest.py  index.md
docs/api-reference/: index.md
docs/user-guide/: advanced.md  catalogs.md  core-concepts.md  execution.md  files.md  getting-started.md  index.md  transforms.md
example/: catalog.py  pipeline.py
pond/: __init__.py  abstract_catalog.py  abstract_transform.py  context.py  decorators.py  field.py  hooks.py  lens.py  state.py  transform.py  transform_index.py  transform_list.py  transform_pipe.py  transforms.py  ui_hook.py  volume.py
pond/api/: __init__.py  analyzer.py  handlers.py  input_transform.py  output_transform.py  progress_hook.py  shared.py  utils.py
pond/catalogs/: abstract_catalog.py  delta_catalog.py  iceberg_catalog.py  lance_catalog.py
pond/hooks/: abstract_hook.py  marimo_progress_bar_hook.py  ui_hook.py
pond/io/: readers.py  writers.py
pond/runners/: abstract_runner.py  parallel_runner.py  sequential_runner.py
pond/transforms/: abstract_transform.py  transform.py  transform_construct.py  transform_index.py  transform_list.py  (+2 more)
tests/: __init__.py  conftest.py  test_decorators.py  test_file_utils.py  test_file_variant.py  test_files.py  test_index_files.py  test_lens.py  test_lens_path.py  test_state.py  test_table_variant.py  test_transform.py  test_transform_index.py  test_transform_pipe.py  test_utils.py  test_variants.py
web/: index.html
(+28 files in other folders)
