[project]
name = "pypond"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.19.0",
    "lancedb>=0.17.0",
    "pandas>=2.2.3",
    "parse>=1.20.2",
    "pydantic-to-pyarrow>=0.1.5",
    "pyiceberg[pyarrow,s3fs,sql-sqlite]>=0.8.1",
    "pytest>=8.3.4",
]
